<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Controller.CreateMeeting">


    <TextView
        android:id="@+id/salle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salle: "
        android:textSize="@dimen/size_create_meeting_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <Spinner
        android:id="@+id/my_spinner_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/salle"
        app:layout_constraintStart_toEndOf="@id/salle"
        app:layout_constraintTop_toTopOf="@id/salle">

    </Spinner>


    <TextView
        android:id="@+id/heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Heure"
        android:textSize="@dimen/size_create_meeting_textview"
        app:layout_constraintBottom_toTopOf="@id/durée"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salle">

    </TextView>

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/heure"
        app:layout_constraintStart_toEndOf="@id/heure"
        app:layout_constraintTop_toTopOf="@id/heure">

    </Button>

    <TextView
        android:id="@+id/durée"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="Durée"
        android:textSize="@dimen/size_create_meeting_textview"
        app:layout_constraintBottom_toTopOf="@id/sujet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heure">

    </TextView>

    <EditText
        android:id="@+id/durée_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/durée"
        app:layout_constraintStart_toEndOf="@id/durée">

    </EditText>

    <TextView
        android:id="@+id/sujet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sujet"
        android:textSize="@dimen/size_create_meeting_textview"
        app:layout_constraintBottom_toBottomOf="@id/participants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/durée">

    </TextView>

    <EditText
        android:id="@+id/meeting_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sujet"
        app:layout_constraintStart_toEndOf="@+id/sujet"
        app:layout_constraintTop_toTopOf="@+id/sujet">

    </EditText>


    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Participants"
        android:textSize="@dimen/size_create_meeting_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sujet">

    </TextView>

    <Button
        android:id="@+id/participants_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/participants"
        app:layout_constraintStart_toEndOf="@+id/participants"
        app:layout_constraintTop_toTopOf="@+id/participants">

    </Button>

    <ImageButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:contentDescription="boutton vers time spinner"
        android:src="@drawable/baseline_done_black_36"
        android:tint="#26DD2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </ImageButton>


</android.support.constraint.ConstraintLayout>