<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_filter">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@mipmap/baseline_filter_list_black_36"
        android:title="Search"
        app:iconTint="@android:color/white"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/refresh_list"
        android:icon="@mipmap/baseline_refresh_black_36"
        android:title="Refresh my list"
        app:showAsAction="always|collapseActionView"
        app:iconTint="@android:color/white">

    </item>

</menu>